@@ -1,7 +1,6 @@
 package br.com.ada.agenda;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Contato {
 
@@ -29,32 +28,16 @@ public class Contato {
         return nome;
     }
 
-    public void setNome(String nome) {
-        this.nome = nome;
-    }
-
     public String getSobreNome() {
         return sobreNome;
-    }
-
-    public void setSobreNome(String sobreNome) {
-        this.sobreNome = sobreNome;
     }
 
     public String getEmpresa() {
         return empresa;
     }
 
-    public void setEmpresa(String empresa) {
-        this.empresa = empresa;
-    }
-
     public String getEmail() {
         return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
     }
 
     public List<Telefone> getTelefones() {
@@ -117,15 +100,13 @@ public class Contato {
             do {
                 Menu.exibirCabecalhoTelefones();
                 this.telefones.stream()
-                        .skip((pageNumber - 1) * pageSize)
+                        .skip((long) (pageNumber - 1) * pageSize)
                         .limit(pageSize)
                         .forEach(telefone ->
-                        {
-                            System.out.printf("%-5s %-15s %-15s\n",
-                                    this.telefones.indexOf(telefone) + 1,
-                                    telefone.getDdd(),
-                                    telefone.getNumero());
-                        });
+                                System.out.printf("%-5s %-15s %-15s\n",
+                                        this.telefones.indexOf(telefone) + 1,
+                                        telefone.getDdd(),
+                                        telefone.getNumero()));
 
                 if (numberOfPages == 1) {
                     loopPagination = false;
@@ -179,7 +160,7 @@ public class Contato {
 
     public void adicionaTelefone() {
         List<TipoTelefone> tipoTelefones = Arrays.stream(TipoTelefone.values())
-                .collect(Collectors.toList());
+                .toList();
 
         String menuTipos = tipoTelefones.stream()
                 .map(tipoTelefone -> String.format("%n%s - %s", tipoTelefone.ordinal() + 1, tipoTelefone.name()))
@@ -203,7 +184,7 @@ public class Contato {
 
     public void adicionaEndereco() {
         List<TipoEndereco> tipoEnderecos = Arrays.stream(TipoEndereco.values())
-                .collect(Collectors.toList());
+                .toList();
 
         String menuTiposEnderecos = tipoEnderecos.stream()
                 .map(tipoEndereco -> String.format("%n%s - %s", tipoEndereco.ordinal() + 1, tipoEndereco.name()))
@@ -221,7 +202,7 @@ public class Contato {
         String cidade = EntradaDados.askSimpleInput("Cidade do Endereço");
 
         List<Estado> estados = Arrays.stream(Estado.values())
-                .collect(Collectors.toList());
+                .toList();
 
         String menuEstados = estados.stream()
                 .map(estado -> String.format("%n%s - %s", estado.ordinal() + 1, estado.name()))
@@ -264,19 +245,17 @@ public class Contato {
             do {
                 Menu.exibirCabecalhoEnderecos();
                 this.enderecos.stream()
-                        .skip((pageNumber - 1) * pageSize)
+                        .skip((long) (pageNumber - 1) * pageSize)
                         .limit(pageSize)
                         .forEach(endereco ->
-                        {
-                            System.out.printf("%-5s %-20s %-20s %-10s %-20s %-5s\n",
-                                    this.enderecos.indexOf(endereco) + 1,
-                                    endereco.getLogradouro(),
-                                    endereco.getBairro(),
-                                    endereco.getNumero(),
-                                    endereco.getCidade(),
-                                    endereco.getUf()
-                            );
-                        });
+                                System.out.printf("%-5s %-20s %-20s %-10s %-20s %-5s\n",
+                                        this.enderecos.indexOf(endereco) + 1,
+                                        endereco.getLogradouro(),
+                                        endereco.getBairro(),
+                                        endereco.getNumero(),
+                                        endereco.getCidade(),
+                                        endereco.getUf()
+                                ));
 
                 if (numberOfPages == 1) {
                     loopPagination = false;
@@ -307,6 +286,5 @@ public class Contato {
     public void removerEndereco(Endereco endereco) {
         this.enderecos.remove(endereco);
         System.out.println("\nEndereço removido com sucesso\n");
-
     }
 }
